Add Some config for cdn

--- a/app/views/spree/home/_hero.html.erb
+++ b/app/views/spree/home/_hero.html.erb
@@ -4,7 +4,7 @@
       <h1 class="hero-title">
         The only eCommerce platform you’ll ever need.
       </h1>
-
+      <%= cdn_image_url(spree_current_user.avatar.variant(resize_to_limit: [128, 128])) %>
       <p class="subtitle">
         Build, customize and scale your store with no limits or license fees.
         Solidus is the free, open-source eCommerce framework for
